<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mcq_bg"
    tools:context=".Quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/previous_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/adlam_display"
            android:text="@string/previous_btn_text"
            android:textColor="#20D16E"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvQuestionNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/adlam_display"
            android:paddingStart="100dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <!-- Question Text -->
        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_border_question"
            android:gravity="center"
            android:paddingTop="60dp"
            android:paddingBottom="60dp"
            android:text="@string/mcq_question_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!-- Radio Group for MCQ Options -->
        <RadioGroup
            android:id="@+id/rgOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQuestion"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rbOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_question"
                android:text="@string/option_1"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />

            <RadioButton
                android:id="@+id/rbOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_question"
                android:text="@string/option_2"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />

            <RadioButton
                android:id="@+id/rbOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border_question"
                android:text="@string/option_3"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />

            <RadioButton
                android:id="@+id/rbOption4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border_question"
                android:text="@string/option_4"
                android:textColor="@color/black"
                android:textSize="@dimen/option_text_size" />
        </RadioGroup>

        <!-- Next Button -->
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rgOptions"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/adlam_display"
            android:text="@string/next_btn_text"
            android:textSize="@dimen/next_btn_text_size" />
    </RelativeLayout>

</LinearLayout>