<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_app">
        <!--        logo display-->
        <ImageView
            android:id="@+id/ivlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="90dp"
            android:background="@drawable/rounded_bg"
            android:clipToOutline="true"
            android:src="@drawable/app_main_logo"></ImageView>

        <!--        label to enter the name and input field-->
        <TextView
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivlogo"
            android:layout_marginLeft="20dp"
            android:text="@string/name_label"
            android:textColor="@color/white"></TextView>

        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvname"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:hint="@string/name_placeholder"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp"></EditText>

        <!--     Start button   -->
        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etname"
            android:layout_marginLeft="@dimen/start_btn_margin"
            android:layout_marginTop="200dp"
            android:layout_marginRight="@dimen/start_btn_margin"
            android:backgroundTint="@color/start_btn_color"
            android:fontFamily="@font/adlam_display"
            android:text="@string/start_btn"
            android:textSize="@dimen/start_btn_text_size"></Button>

    </RelativeLayout>

</LinearLayout>